--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "gulp-csso": "^4.0.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.1.0",
-    "gulp-watch": "^5.0.1"
+    "gulp-sass": "^4.1.0"
   }
 }
